--- a/software.html
+++ b/software.html
@@ -39,12 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=n9wNmMw5'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
+<p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='http://validity.applytojob.com/apply/AfLccHBOah/Software-Engineer'>Software Engineer - Validity - Career Page</a></h5> 
+<p><span class="badge badge-light">Broomfield, CO</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/opentable/jobs/4497094002'>Job Application for Software Engineer (Mid-level) at OpenTable</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1930866'>Job Application for Senior Software Engineer, Intelligence Platform at Sony Interactive Entertainment PlayStation</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/clinc/b5963cdc-8a6a-4366-a378-b7cc6d54c53b'>Clinc - Software Engineer, AI Experience</a></h5> 
@@ -95,7 +103,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -107,7 +115,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  Austin, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oECpbfwA&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n42KmMwt&jvi=oECpbfwA,Job&jvk=Job'>Medidata Solutions Careers - Software Engineer (C# / .Net)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oECpbfwA&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n42KmMwt&jvi=oECpbfwA,Job&jvk=Job'>Medidata Solutions Careers - Software Engineer (C# / .Net)</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -135,7 +143,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/edkiY2Wb8f/Senior-Software-Engineer-Python-Engineer'>Senior Software Engineer - Python Engineer - ZigZag Careers - Career Page</a></h5> 
+<h5><a href='http://zigzag.applytojob.com/apply/edkiY2Wb8f/Senior-Software-Engineer-Python-Engineer'>Senior Software Engineer - Python Engineer - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -143,7 +151,7 @@
 <p><span class="badge badge-light">Cambridge, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698313147-software-engineer-continuous-integration-infrastructure'>Square Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698313147-software-engineer-continuous-integration-infrastructure'>Square Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -203,7 +211,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698319591-software-developer'>IBI Group Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698319591-software-developer'>IBI Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -227,7 +235,7 @@
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://smartmicro.join.com/jobs/459242-software-engineer-m-f-d'>Job @ smartmicro (Brunswick): Software Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartmicro.join.com/jobs/459242-software-engineer-m-f-d'>Job @ smartmicro (Brunswick): Software Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -269,11 +277,11 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/ujzp3fzoq45p58uobgxwifhm4c'>Sr. Software Developer | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/ujzp3fzoq45p58uobgxwifhm4c'>Sr. Software Developer | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opRpbfwA&__jvst=Employee+Referral&__jvsd=sEPvYgwH&__jvsc=Twitter&bid=nfgfmMwn'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opRpbfwA&__jvst=Employee+Referral&__jvsd=sEPvYgwH&__jvsc=Twitter&bid=nfgfmMwn'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -297,7 +305,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584713'>Stellenangebot: Software Developer Backend (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584713'>Stellenangebot: Software Developer Backend (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -391,7 +399,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n7QQlMwp'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n7QQlMwp'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -447,14 +455,6 @@ Office.</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Software Engineer - Trainee develops the next-generation technologies that 
 change how Global Trade is done. Our products need to handle information at?...</p>
-<hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-advanced-server-access-staff---principal-1539447/?gh_src=349be7cd1'>Software Engineer, Advanced Server Access (Staff / Principal) | Okta</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
