--- a/machine.html
+++ b/machine.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://engineering.academickeys.com/job/yqowp9mj/'>University Job: Assistant Professor (Tenure Track) in Electrical &amp; Computer Engineering (AI &amp; Machine Learning), Ryerson University</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.academickeys.com/job/yqowp9mj/'>University Job: Assistant Professor (Tenure Track) in Electrical &amp; Computer Engineering (AI &amp; Machine Learning), Ryerson University</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -169,7 +169,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/opendoor/0794f867-9b94-42f7-9fbc-86acb95ea452'>Opendoor - Software Engineer (Machine Learning)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/opendoor/0794f867-9b94-42f7-9fbc-86acb95ea452'>Opendoor - Software Engineer (Machine Learning)</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -181,7 +181,7 @@ healthcare?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wrnch.recruitee.com/o/senior-machine-learning-developer'>
+<h5><a href='https://wrnch.recruitee.com/o/senior-machine-learning-developer'>
       Senior Machine Learning Developer - wrnch
     </a></h5> 
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
@@ -274,7 +274,7 @@ ML;?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
       Machine Learning Engineer - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -353,7 +353,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oC25afwD'>Splunk Careers - Machine Learning Intern (Summer 2019)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oC25afwD'>Splunk Careers - Machine Learning Intern (Summer 2019)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -393,7 +393,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 Learning ?Data Scientist. This position collaborates with analytic and data teams 
 to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/resonate/job/osClbfwk'>Resonate Careers - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/resonate/job/osClbfwk'>Resonate Careers - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Reston, Virginia</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -444,7 +444,7 @@ in the mathematics behind deep learning; Love for writing efficient and?...</p>
 <p>Oct 9, 2019 ... Head of Machine Learning Infrastructure and Operations. Job description. The 
 Company. Founded in 2016, ThirdEye uses AI to automate the world's 245m?...</p>
 <hr/>
-<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Pennsylvania---Upper-Providence/Machine-Learning-Engineer_227836'>Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Pennsylvania---Upper-Providence/Machine-Learning-Engineer_227836'>Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... The Machine Learning engineer opportunity is an exciting role that will stretch 
 your knowledge and curiosity, empower you to be creative, ambitious, & bold, 
@@ -490,7 +490,7 @@ and?...</p>
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://idealocareer.recruitee.com/l/en/o/product-owner-fmx-machine-learning-engineering'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idealocareer.recruitee.com/l/en/o/product-owner-fmx-machine-learning-engineering'>
       Product Owner (f|m|x) Machine Learning Engineering - idealo internet GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
